@@ -1,0 +1,24 @@
+\name{is.RStudio}
+\alias{is.RStudio}
+\title{Checks if the R session is running within RStudio}
+\usage{
+  is.RStudio()
+}
+\value{
+  Returns TRUE/FALSE if the R session is running within
+  RStudio or not.
+}
+\description{
+  Returns TRUE/FALSE if the R session is running within
+  RStudio or not.
+}
+\details{
+  This function is used in order to check if a GUI can be
+  added to the session or not.
+}
+\examples{
+\dontrun{
+is.RStudio()
+}
+}
+
